<resources>
    <string name="app_name">Retailer Captain</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="login_pin">Login Pin</string>
    <string name="pin">Pin</string>
    <string name="please_wait">Please Wait....</string>
    <string name="error">Error</string>
    <string name="database_not_found">Database not found. Please contact the vendor.</string>
    <string name="field_required">Field Required</string>
    <string name="invalid_credentials">Invalid Credentials...</string>
    <string name="please_click_back_again_to_exit">Press the Back button once more to exit</string>
    <string name="opening_cash">Opening Cash</string>
    <string name="credit_online_amount">Credit/Online Amount</string>
    <string name="cash_billed">Cash Billed</string>
    <string name="todays_cash">Today\'s Cash</string>
    <string name="dob_hint">dd-mm-yyyy</string>
    <string name="day_start">Day Start</string>
    <string name="continue_with">Continue</string>
    <string name="day_end">Day Close</string>
    <string name="opening_date_time">Opening Date</string>
    <string name="added_successfully">Add Successfully</string>
    <string name="day_close_already">Day Close Already</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="tables">Tables</string>
    <string name="orders">Orders</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="sr_no">Sr.No.</string>
    <string name="rate">Rate</string>
    <string name="quantity">Quantity</string>
    <string name="id">Id</string>
    <string name="total">Total</string>
    <string name="currency">Rs.</string>
    <string name="select_table">Please Select Table</string>
    <string name="select_other_table">Please Select other table</string>
    <string name="total_amount">Total Amount</string>
    <string name="no_of_item">No. of item</string>
    <string name="total_quantity">Total Qty</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="kot">KOT</string>
    <string name="search_by_code">Search By Code</string>
    <string name="search_by_name">Search By Name</string>
    <string name="search">Search</string>
    <string name="welcome_msg">Welcome to Retailer App</string>
    <string name="company_name">Balaji Telecom</string>
    <string name="no_internet">To set up the device you need to have an internet connection. Please check your Wifi setting and get back to the app.</string>
    <string name="go_to_wifi">GoTo Wifi Settings</string>
    <string name="close">Close</string>
    <string name="category">Category</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No.</string>
    <string name="purpose_of_device">Purpose of Device</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="add_user">Add User</string>
    <string name="submit">Submit</string>
    <string name="role">Role</string>
    <string name="something_went_wrong">Something Went Wrong.....</string>
    <string name="add_product">Add Product</string>
    <string name="next">Next</string>
    <string name="select_option">Select Option</string>
    <string name="add_sub_prodcut">Add Sub Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="delete_product">Delect Product</string>
    <string name="drap_drop">Drag and Drop File \n Choose File to Upload</string>
    <string name="or">OR</string>
    <string name="view_sub_product">View Sub Product</string>
    <string name="please_add_prodict">Please add atleast one user to proceed further</string>
    <string name="description">Description</string>
    <string name="setup_bill_format">Setup Bill Format</string>
    <string name="setup_header_bill_format">Setup Header of Bill Format</string>
    <string name="setup_footer_bill_format">Setup Footer of Bill Format</string>
    <string name="main_bill_checkbox1">Tax column with each billed items</string>
    <string name="main_bill_checkbox2">Tax Summary at the bottom of the bill</string>
    <string name="main_bill_checkbox3">Saving/discount details at the bottom of the bill</string>
    <string name="bill_size">Bill Size</string>
    <string name="bill_header">Bill Header</string>
    <string name="address">Address</string>
    <string name="telepohone_no">"Telephone No.  "</string>
    <string name="gst_no">GST No.</string>
    <string name="bill_footer">Bill Footer</string>
    <string name="category_import_file_no_found">tbl_category.csv File to be imported not found</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_send">An OTP (one time password) has been sent to </string>
    <string name="and"> and </string>
    <string name="continueTxt">Continue</string>
    <string name="configuration_completed">Configuration of Device Completed Please Restart Your Device</string>
    <string name="edit_user">Edit User</string>
    <string name="user_managment">User Management</string>
    <string name="product_managment">Product Management</string>
    <string name="bill_format">Bill Format</string>
    <string name="order_history">Order History</string>
    <string name="order_management">Order Management</string>
    <string name="save">Save</string>
    <string name="prodcut_management">Product Management</string>
    <string name="invalid_emailid">invalid email id</string>
    <string name="invalid_mobile_no">invalid mobile number</string>
    <string name="user_status_not_found">Not able to recognize user status</string>
    <string name="org_registration">Organization Registration</string>
    <string name="get_started">Get Started</string>
    <string name="invalid">Invalid</string>
    <string name="otp_not_receive">If you have not received the OTP,</string>
    <string name="insert_fail">Failed to add details</string>
    <string name="org_insert_fail">Failed to add organization details as tbl_organisation table not found in database</string>
    <string name="device_insert_fail">Failed to add device details as tbl_devices table not found in database</string>
    <string name="branch_device_insert_fail">Failed to add branch device details as tbl_branch_devices table not found in database</string>
    <string name="branch_insert_fail">Failed to add branch details as tbl_branches table not found in database</string>
    <string name="user_insert_fail">Failed to add user details as tbl_users table not found in database</string>
    <string name="user_edit_fail">Failed to update user details as tbl_users table not found in database</string>
    <string name="product_category_insert_fail">Failed to add product category details as tbl_product_categories table not found in database</string>
    <string name="product_insert_fail">Failed to add product details as tbl_product table not found in database</string>
    <string name="add_new">Add New</string>
    <string name="product_update_fail">Failed to update product details as related id not found in database</string>
    <string name="edit_sub_prodcut">"Edit Sub Product "</string>
    <string name="sub_product_update_fail">Failed to update sub product details as related id not found in database</string>
    <string name="sub_product_insert_fail">Failed to insert sub product details as tbl_menu_item table not found in database</string>
    <string name="please_add_user">Please add atleast one user to proceed further</string>
    <string name="menu_import_file_no_found">cat1.csv File to be imported not found</string>
    <string name="delete">Delete</string>
    <string name="user_delete_fail">Failed to delete user details as related id not found in database</string>
    <string name="product_delete_fail">Failed to delete product details as related id not found in database</string>
    <string name="sub_product_delete_fail">Failed to delete sub product details as related id not found in database</string>
    <string name="food">Food</string>
    <string name="bill">Bill</string>
    <string name="change">Change</string>
    <string name="bar">Bar</string>
    <string name="clean">Clear</string>
    <string name="menu">Menu</string>
    <string name="add_item_in_order">Please add items in order to proceed</string>
    <string name="kot_already_send">KOT already send for this table</string>
    <string name="kot_successfull">KOT sent successfully</string>
    <string name="kot_fail">"Fail fail to sent "</string>
    <string name="product_category_name_insert_fail">Failed to add product category name as tbl_language_text table not found in database</string>
    <string name="product_name_insert_fail">Failed to add product name as tbl_language_text table not found in database</string>
    <string name="product_category_description_insert_fail">Failed to add product category description as tbl_language_text table not found in database</string>
    <string name="product_description_insert_fail">Failed to add product description as tbl_language_text table not found in database</string>
    <string name="is_eatable">Is Eatable</string>
    <string name="is_veg">is Vegetarian</string>
    <string name="is_alcohol">is Alcohol</string>
    <string name="is_frozen">is Frozen</string>
    <string name="is_jain">is Jain</string>
    <string name="is_vegan">is Vegan</string>
    <string name="langauge_selected">EN</string>
    <string name="product_eatable_details_insert_fail">Fail to add product eatable details as tbl_product_eatable table not found</string>
    <string name="edit_category">Edit Category</string>
    <string name="add_category">Add Category</string>
    <string name="kot_insert_fail">Fail to send KOT as tbl_order_bill tabl not found in database</string>
    <string name="kot_detail_insert_fail">Fail to sent KOT as tbl_order_details table not found database</string>
    <string name="table_type_update_fail">Fail to update table status as related id not found</string>
    <string name="occupied_select_other_table">This table is already occupied, please select another one.</string>
    <string name="kot_detail_update_fail">Fail to update KOT as related not found in database</string>
    <string name="kot_update">KOT updated successfully</string>
    <string name="amount">Amount</string>
    <string name="add_order">Add Order</string>
    <string name="amount_in_rs">Amount</string>
    <string name="remove">Remove</string>
    <string name="send_item_to_kot">Some item added who\'s KOT not yet print.</string>
    <string name="pin_exits">Entered pin already registered</string>
    <string name="check_kot">Check KOT</string>
    <string name="finalize_print_kot">Finalize and Print Bill</string>
    <string name="reprint_bill">Reprint Bill</string>
    <string name="check_kot_successfull">Check KOT printed Successfully</string>
    <string name="day_no_yet">Day close not done for previous day</string>
    <string name="bill_format_insert_fail">"Failed to save Bill Format as tbl_bill_format table of database not found "</string>
    <string name="organisation_status_update_failed">Failed to updated organisation status as related id not found in database table</string>
    <string name="bill_format_update_fail">"Failed to update bill format as related id not found in database "</string>
    <string name="add_order_bill">Order not taken for this table yet</string>
    <string name="bill_printed_successfully">Bill printed Successfully</string>
    <string name="due">Due</string>
    <string name="tender">Tender</string>
    <string name="reprint">Reprint</string>
    <string name="merge">Merge</string>
    <string name="logout">Logout</string>
    <string name="split">Split</string>
    <string name="join">Join</string>
</resources>