<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgd_gradient"
    android:orientation="vertical"
    tools:context=".activities.TableSelectionActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/order_menu_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/food"
                android:layout_margin="7dp"
                android:background="@drawable/back_whiteblack"
                android:textColor="@color/black"
                android:drawableTop="@drawable/food"
                android:textSize="@dimen/small_text"
                android:fontFamily="sans-serif"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="OnOrderOptionClick"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bar_order_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/bar"
                android:layout_margin="7dp"
                android:background="@drawable/back_whiteblack"
                android:textColor="@color/black"
                android:drawableTop="@drawable/bar"
                android:textSize="@dimen/small_text"
                android:fontFamily="sans-serif"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="OnBarOrderClick"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bill_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/bill"
                android:layout_margin="7dp"
                android:background="@drawable/back_whiteblack"
                android:textColor="@color/black"
                android:drawableTop="@drawable/reciept"
                android:textSize="@dimen/small_text"
                android:fontFamily="sans-serif"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="OnBillOptionClick"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/clean_table_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/clean"
                android:layout_margin="7dp"
                android:background="@drawable/back_whiteblack"
                android:textColor="@color/black"
                android:drawableTop="@drawable/clear"
                android:textSize="@dimen/small_text"
                android:fontFamily="sans-serif"
                android:padding="7dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                android:onClick="onClearOptionClick"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/change_table_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/change"
                android:layout_margin="7dp"
                android:background="@drawable/back_whiteblack"
                android:textColor="@color/black"
                android:drawableTop="@drawable/change"
                android:textSize="@dimen/small_text"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="onChangeOptionClick"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/split_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/split"
                android:layout_margin="7dp"
                android:background="@drawable/back_whiteblack"
                android:textColor="@color/black"
                android:drawableTop="@drawable/merge"
                android:paddingTop="10dp"
                android:textSize="@dimen/small_text"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="onSplitOptionClick"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/merge_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/merge"
                android:layout_margin="7dp"
                android:background="@drawable/back_whiteblack"
                android:textColor="@color/black"
                android:drawableTop="@drawable/merge"
                android:paddingTop="10dp"
                android:textSize="@dimen/small_text"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="onMergeOptionClick"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/join_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/join"
                android:layout_margin="7dp"
                android:background="@drawable/back_whiteblack"
                android:textColor="@color/black"
                android:drawableTop="@drawable/merge"
                android:paddingTop="10dp"
                android:textSize="@dimen/small_text"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="onJoinOptionClick"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/back_title"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:text="@string/logout"
                android:layout_margin="7dp"
                android:background="@drawable/back_whiteblack"
                android:textColor="@color/black"
                android:drawableTop="@drawable/ic_power"
                android:drawableTint="#0d557d"
                android:textSize="@dimen/small_text"
                android:fontFamily="sans-serif"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="OnBackOptionClick"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </HorizontalScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>