<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/balajimaroon"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:drawableRight="@drawable/ic_close"
            android:drawablePadding="10dp"/>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"/>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="15dp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/balajimaroon"
            app:cardCornerRadius="5dp"
            android:layout_gravity="left"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="@dimen/text_size"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/balajimaroon"
            app:cardCornerRadius="5dp"
            android:layout_gravity="right"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_reprint"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/reprint"
                android:textColor="@color/white"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="@dimen/text_size"/>
        </androidx.cardview.widget.CardView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.appcompat.widget.LinearLayoutCompat>