<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size"
            android:drawableRight="@drawable/ic_close"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <LinearLayout
            android:id="@+id/drapDiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_upload"
                android:tint="@color/black"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/select_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drap_drop"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/or_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:fontFamily="sans-serif"
                        android:textSize="@dimen/text_size"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"/>
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back_trans_black"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="@dimen/text_size"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:nextFocusForward="@id/edt_price"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:fontFamily="sans-serif"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"/>
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/back_trans_black"
                        android:fontFamily="sans-serif"
                        android:textSize="@dimen/text_size"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:maxLength="10"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:singleLine="true"
                        android:imeOptions="actionDone"/>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="20dp">
                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="5dp"
                            android:layout_margin="20dp"
                            app:cardBackgroundColor="@color/black"
                            android:layout_gravity="center">
                            <TextView
                                android:id="@+id/btn_submit"
                                android:layout_width="140dp"
                                android:layout_height="wrap_content"
                                android:text="@string/save"
                                android:textSize="@dimen/title_text"
                                android:paddingRight="20dp"
                                android:paddingLeft="20dp"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textStyle="bold"/>
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="5dp"
                            android:layout_margin="20dp"
                            app:cardBackgroundColor="@color/black"
                            android:layout_gravity="center">
                            <TextView
                                android:id="@+id/btn_delete"
                                android:layout_width="140dp"
                                android:layout_height="wrap_content"
                                android:text="@string/delete"
                                android:textSize="@dimen/title_text"
                                android:paddingRight="20dp"
                                android:paddingLeft="20dp"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textStyle="bold"/>
                        </androidx.cardview.widget.CardView>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>